--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,5 +59,9 @@
   },
   "exclude": [
     "node_modules", "babel.config.js", "metro.config.js", "jest.config.js"
-  ]
+  ],
+  "baseUrl": ".",
+    "paths": {
+      "app/*": ["./*"]
+    }
 }
